Get the header ready to work on.

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,7 @@
 <header>
-
+    <div class="row">
+        <div class="small-12 columns">
+            <h2>Hello from the header partial</h2>
+        </div>
+    </div>
 </header>
