Add Font Awesome to the development dependencies.

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -51,4 +51,6 @@
 
 
 // My own styles. -JMS
-@import "components/author";
+// Remember where these paths are relative to. -JMS
+@import "author";
+@import "components/font-awesome/font-awesome";
