Refactor to add a class to the section title.

--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,6 +1,6 @@
 <section class="contact">
     <div class="row">
-        <div class="small-12 columns text-center">
+        <div class="small-12 columns text-center section-title">
             <h3>Get in &mdash;<br>Touch!</h3>
         </div>
     </div>
