Add Section Blog

--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -1,1 +1,56 @@
-blog
+<section class="blog">
+	<div class="row">
+		<div class="small-12 columns text-center section-title">
+			<h3>The &mdash;<br>Blog!</h3>
+		</div>
+	</div>
+
+	<div class="row featured-post">
+		<div class="small-12 medium-6 columns">
+			<img src="/assets/img/png/over-head-desk.png" alt="desk image" height="340" width="570">
+		</div>
+		<div class="small-12 medium-4 columns end excerpt">
+			<p class="blog-publish-data">12 FEBRUARY 2015</p>
+			<h4>Ain't No Rest For the Wicked</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+				dolore texercaitation ullamco laboris nisi ut aliquip exs ea commodo consequat.</p>
+
+			<a href="#">Open Post</a>
+		</div>
+	</div>
+
+	<div class="row featured-post">
+		<div class="small-12 medium-4 columns accent">
+			<img src="/assets/img/png/squiggle.png" alt="">
+		</div>
+		<div class="small-12 medium-4 columns">
+			<img src="/assets/img/png/herbs-in-a-planter.png" alt="close-up image of herbs in a planter" height="599" width="370">
+		</div>
+		<div class="small-12 medium-4 columns end excerpt">
+			<p class="blog-publish-data">10 FEBRUARY 2015</p>
+			<h4>MONEY DON’T GROW ON TREES</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+				dolore texercaitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+			<a href="#" class="full-underline">Open Post</a>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="small-12 columns text-center">
+			<a href="#" class="check-more-posts small-underline">Check more posts</a>
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+</section>
