--- a/src/assets/scss/_author.scss
+++ b/src/assets/scss/_author.scss
@@ -1,3 +1,47 @@
+// Utilities
+.section-title {
+  margin-bottom: rem-calc(158);
+}
+.section-title > * {
+  color: #222;
+  font-family: 'OpenSans', $header-font-family;
+  font-size: 2.5rem;
+  font-weight: 700;
+  line-height: 2.5rem;
+}
+.full-underline {
+  display: inline-block;
+  position: relative;
+  align-self: baseline;
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    display: inline-block;
+    height: 1em;
+    width: 100%;
+    border-bottom: 3px solid #222;
+    margin-top: 10px;
+  }
+}
+
+.small-underline {
+  display: inline-block;
+  position: relative;
+  &:before {
+    content: '';
+    position: absolute;
+    left: 50%;
+    margin-left: -10%;
+    display: inline-block;
+    height: 1em;
+    width: 20%;
+    border-bottom: 3px solid #222;
+    margin-top: 10px;
+  }
+}
+
+
 // SECTION Footer
 footer {
   padding: rem-calc(68) 0 rem-calc(58);
@@ -27,6 +71,59 @@ footer {
     }
     i {
       font-size: 1.5rem;
+    }
+  }
+}
+
+// SECTION Blog
+.blog {
+  padding: rem-calc(150) 0 rem-calc(160);
+  .featured-post {
+    display: flex;
+    margin-bottom: rem-calc(40);
+  }
+  .featured-post > * {
+    display: flex;
+    flex-direction: column;
+  }
+  .accent {
+    align-items: center;
+    justify-content: center;
+  }
+  .check-more-posts {
+    margin-top: rem-calc(48);
+    color: $header-small-font-color;
+    font-family: 'OpenSans', $header-font-family;
+    font-size: 1.063rem;
+    font-weight: 600;
+    line-height: 1.25rem;
+    text-transform: uppercase;
+  }
+  .excerpt {
+    h4 {
+      color: $black;
+      font-family: 'OpenSans', $header-font-family;
+      font-size: 1.875rem;
+      font-weight: 700;
+      line-height: 1.688rem;
+      text-transform: uppercase;
+    }
+    p {
+      color: $body-font-color;
+      font-family: 'Lato', $body-font-family;
+      font-size: 1.25rem;
+      font-weight: 400;
+      line-height: 1.25rem;
+
+    }
+    a {
+      color: $body-font-color;
+      font-family: 'Open Sans', $body-font-family;
+      font-size: 1rem;
+      font-weight: 600;
+      line-height: 1.25rem;
+      margin-top: rem-calc(90);
+      @extend .full-underline;
     }
   }
 }
