--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -55,6 +55,7 @@ $foundation-palette: (
   warning: #ffae00,
   alert: #ec5840,
 );
+$blue: blue;
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
