--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,34 @@
 <header>
-    <div class="row">
-        <div class="small-12 columns">
-            <h2>Hello from the header partial</h2>
+    <div class="row align-justify">
+        <div class="columns">
+            <a href="/"><img src="../assets/img/png/logo.png" alt="Diff Logo"></a>
         </div>
+	    <div class="columns icon-close">
+		    <i class="fa fa-times" aria-hidden="true"></i>
+	    </div>
     </div>
+	<div class="row site-title-navigation">
+		<div class="small-12 medium-5 columns site-title">
+			<h1>A <span class="strikethrough">Not So</span> Different<span class="em-dash">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Folio</h1>
+		</div>
+		<div class="small-12 medium-6 columns site-navigation">
+			<ul class="quad-menu">
+				<li><a href="#" class="med-underline">About</a></li>
+				<li><a href="#" class="med-underline">Work</a></li>
+				<li><a href="#" class="med-underline">Blog</a></li>
+				<li><a href="#" class="med-underline">Contact</a></li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="small-12 medium-3 columns social-icons-header">
+			<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+			<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+			<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+			<a href="#"><i class="fa fa-vimeo" aria-hidden="true"></i></a>
+			<a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
+		</div>
+	</div>
+	
 </header>
