--- a/src/partials/work.html
+++ b/src/partials/work.html
@@ -15,17 +15,20 @@
 
 
 	<div class="row flex-end">
-		<div class="small-12 medium-6 columns">
+		<div class="small-12 medium-6 columns image">
+			<p class="image-caption cap-upper-left">Heclem Magazine<br></bra><span>EDITORIAL DESIGN</span></p>
 			<img src="/assets/img/jpg/pamphlet.jpg" alt="">
 		</div>
 	</div>
 
 
-	<div class="row row-padding text-center">
-		<div class="small-12 medium-4 columns">
+	<div class="row row-padding">
+		<div class="small-12 medium-4 columns image">
+			<p class="image-caption cap-upper-right">Alt-J Fall Tour<br></bra><span>Graphic Design</span></p>
 			<img src="../assets/img/jpg/flower-pattern-book-cover.jpg" alt="" class="up-image-60">
 		</div>
-		<div class="small-12 medium-4 columns">
+		<div class="small-12 medium-4 columns image">
+			<p class="image-caption cap-mid-left">Elegent Theme<br></bra><span>Web Design</span></p>
 			<img src="../assets/img/png/half-imac.png" alt="">
 		</div>
 		<div class="small-12 medium-4 columns text-center centered-accent three-straight-lines show-for-medium">
@@ -35,14 +38,16 @@
 
 
 	<div class="row row-padding">
-		<div class="small-12 medium-2 columns pos-rel show-for-medium">
+		<div class="small-12 medium-2 columns pos-rel show-for-medium image">
 			<img src="../assets/img/png/single-diagonal-line-backslash.png" alt="" height="152" width="90"
 			     class="up-image-60">
 		</div>
-		<div class="small-12 medium-6 columns">
+		<div class="small-12 medium-6 columns image ">
+			<p class="image-caption cap-upper-left">Magazine<br></bra><span>EDITORIAL DESIGN</span></p>
 			<img src="../assets/img/jpg/fallen-poster.jpg" alt="" width="570" height="340">
 		</div>
-		<div class="small-12 medium-4 columns text-center centered-accent ">
+		<div class="small-12 medium-4 columns image">
+			<p class="image-caption cap-mid-low-left">Argo<br></bra><span>Branding</span></p>
 			<img src="../assets/img/jpg/hanging-open-book.jpg" alt="" width="370" height="560" class="up-image-60">
 		</div>
 	</div>
